attempt removing margins at xs screens

--- a/Assets/Images/style.css
+++ b/Assets/Images/style.css
@@ -1,6 +1,6 @@
-header {
-    background-color: #aa00ff;
-}
-.head {
-    background-color: #aa00ff !important;
+.container {
+    @include media-breakpoint-up(sm) {
+        padding: 0;
+        margin: 0;
+    }
 }
