--- a/style.css
+++ b/style.css
@@ -96,3 +96,39 @@ nav {
 .prettyFont {
   font-family: 'Permanent Marker', cursive;
 }
+
+@media (min-width: 1200px) { 
+
+/* Animation Delays */
+.delay-250ms {
+  animation-delay: 250ms;
+}
+
+.delay-500ms {
+  animation-delay: 500ms;
+}
+
+.delay-750ms {
+  animation-delay: 750ms;
+}
+
+.delay-1000ms {
+  animation-delay: 1000ms;
+}
+
+.delay-1250ms {
+  animation-delay: 1250ms;
+}
+
+.delay-1500ms {
+  animation-delay: 1500ms;
+}
+
+.delay-1750ms {
+  animation-delay: 1750ms;
+}
+
+.delay-2000ms {
+  animation-delay: 2000ms;
+}
+}
