--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 }
 
 .codingBackground {
-  background-image: url("./Assets/Images/codingbackground.png");
+  background-image: url("./Assets/Images/codingbackground_1200.png");
 }
 
 .btn-bg-0 {
@@ -109,6 +109,10 @@ nav {
 
 
 @media (min-width: 1200px) { 
+
+.codingBackground {
+  background-image: url("./Assets/Images/codingbackground.png");
+}
 
 /* Animation Delays */
 .delay-250ms {
